# agentark

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  HN_POST.md  HN_POST_EN.md  LICENSE  README.md  README.zh.md  SECURITY.md  SPRINT-001.md  SPRINT-002.md  pyproject.toml  sprint-001-tasks.json  sprint-002-tasks.json  test_daily_smoke.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: apex-multiagent.rb  apex.rb
agentark/: __main__.py  daemon.py  protocol.py  skill_evaluator.py
agentark/adapters/: __init__.py  base.py  claude.py  hermes.py
agentark/cli/: main.py
agentark/core/: __init__.py  config.py  evolution.py  injector.py  knowledge.py  memory.py  profile.py  project_template.py  runtime.py  templates.py
agentark/economy/: __init__.py
agentark/fleet/: lan_discovery.py  scheduler.py
agentark/interface/: agent_monitor.py  aliases.py  audit_flow.py  doctor.py  first_run.py  fleet_api.py  fleet_multi_mac.py  gpu_manager.py  hermes_context.py  hermes_sync.py  live_status.py  logo.py  methodology_engine.py  middleware.py  model_selector.py  openclaw_bridge.py  pm_render.py  project_factory.py  project_ops.py  project_registry.py  setup_wizard.py  skill_registry.py  skin_engine.py  spinner.py  superpowers_bridge.py  tool_discovery.py  tutorial.py  version.py  web.py
agentark/mcp/: hub.py  stdio_client.py
apex/: __init__.py  __main__.py  cost_tracker.py  daemon.py  skill_evaluator.py
docs/: demo.cast  fleet-mac-b-join-guide.md  message-router.md  notification-system.md  superpowers-integration-plan.md
fleet/: .gitignore  SOUL.md  config.yaml  fleet.json
ops-mcp/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: bridge_sync.py  fleet-join-worker.sh  fleet_heartbeat.py  gb10_hermes_api.py  gb10_probe.py  gb10_tunnel_keepalive.sh  install.sh  model_arena.py  ollama_tunnel_keepalive.sh  record-demo.sh  seed_knowledge.py
test-project/: apex.yaml
tests/: conftest.py  test_bridge.py  test_economy.py  test_integration.py  test_knowledge.py  test_mcp.py  test_mcp_cross_language.py  test_orchestration_healing.py  test_orchestration_kanban.py  test_orchestration_swarm.py  test_origin.py  test_profile.py  test_sprint_pipeline.py
(+768 files in other folders)
