[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex"
version = "0.1.0"
description = "全宇宙最受欢迎的多Agent操作系统 — One person, infinite capacity."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Luke & 小卢"},
]

dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.scripts]
apex = "apex.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["apex"]
