[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex-multiagent"
version = "0.5.0"
description = "⚡ Apex — The world's most advanced Multi-Agent Operating System. One person, infinite capacity."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["multi-agent", "ai", "agent-framework", "llm", "orchestration", "swarm", "crew"]

authors = [
    {name = "Luke & 小卢"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://github.com/lcyluke/apex"
Repository = "https://github.com/lcyluke/apex"
Documentation = "https://github.com/lcyluke/apex#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=4.0",
]
web = [
    "flask>=3.0",
]
all = [
    "flask>=3.0",
]

[project.scripts]
apex = "apex.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["apex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["apex"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "if __name__ == .__main__.:",
]
